added four background colors

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,19 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#mumbai {
+         background-color: #b72b34;
+}
+
+#manila {
+         background-color: #e04050;
+}
+
+#logos {
+         background-color: #edf8d8;
+}
+
+#bagota {
+         background-color: #D6A7DF;
+}
